owl carousel servises & revievs animate complete

--- a/app/index.html
+++ b/app/index.html
@@ -103,10 +103,14 @@
      		</div>
      	</div>
 		<section class="servises">
-			<div class="container">
+			<div class="container-fluid">
 			 <div class="row">
-			  <div class="col-10">	
-					<div class="owl-carousel owl-theme carousel-servises">
+			  
+				  <div class="col-1 align-self-center">
+				       <div class="owl-prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+					</div>
+					<div class="col-8">
+					  <div class="owl-carousel owl-theme carousel-servises">
 						<div class="item">
 						  <a href="#">
 							<h4>Лендинг</h4>
@@ -131,9 +135,12 @@
 							<span>от <h3 class="pay">20 000</h3> руб</span>
 						  </a>	
 						</div>
-						</div>
-						</div>
-					</div>
+					   </div>
+					   </div>
+						   <div class="col-1 align-self-center">
+						   		<div class="owl-next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+						   </div>
+					  </div>
 				</div>
 				<div class="description-mobile">
 					<div class="container-fluid">
@@ -268,10 +275,10 @@
 
 		<section class="infographics">
 			<div class="container">
-				<div class="row">
+				<div class="row desktop-infographics">
 					<div class="col-12">
 						<h2>Этапы разработки</h2>
-					</div>	
+					</div>		
 					<div class="col align-self-start">
 						<p><span>1)</span> Свяжитесь со мной</p>
 						<i class="fa fa-mobile" aria-hidden="true"></i>
@@ -293,6 +300,36 @@
 					</div>
 					<div class="col align-self-start">
 					    <p><span>5)</span> Ваш сайт готов!</p>
+						<i class="fa fa-desktop" aria-hidden="true"></i>
+					</div>
+				</div>
+
+				<!-- mobile hidden infographics -->
+				<div class="row mobile-infographics">
+					<div class="col-12">
+						<h2>Этапы разработки</h2>
+					</div>
+					<div class="col-12">
+						<p><span>1)</span> Свяжитесь со мной</p>
+						<i class="fa fa-mobile" aria-hidden="true"></i>
+						<i class="fa fa-skype" aria-hidden="true"></i>
+						<i class="fa fa-whatsapp" aria-hidden="true"></i>
+						<i class="fa fa-envelope-o" aria-hidden="true"></i>
+					</div>
+					<div class="col-12">
+						<p><span>2)</span> Обсуждение проекта</p>
+						<i class="fa fa-podcast" aria-hidden="true"></i>
+					</div>
+					<div class="col-12">
+						<p><span>3)</span> Составление сметы</p>
+						<i class="fa fa-list" aria-hidden="true"></i>
+					</div>
+					<div class="col-12">
+						<p><span>4)</span> Дизайн, верстка, интеграция на CMS, размещение на хостинге</p>
+						<i class="fa fa-cogs" aria-hidden="true"></i>
+					</div>
+					<div class="col-12">
+						<p><span>5)</span> Ваш сайт готов!</p>
 						<i class="fa fa-desktop" aria-hidden="true"></i>
 					</div>
 				</div>
@@ -414,18 +451,26 @@
 
 		<section class="reviews-carousel">
 			<div class="container">
-				<div class="row">
-					<div class="col-12">
+				<div class="row reviews">
+				  <div class="col-1 align-self-center">
+				  		<div class="owl-next"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+				  </div>
+					<div class="col-10">
 						<div class="owl-carousel owl-theme">
-
 
 						  	<div class="owl-item">
 						  		<div class="row">
 						  			<div class="col-2">
 						  				<img src="img/images/my-photo.png" alt="photo">
 						  			</div>
-						  		<div class="col">
-						  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
+						  		<div class="col-9 align-self-center">
+						  		  <div class="col-1 offset-5">
+						  		    <div class="col-1 offset-5">
+						  		      <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+						  		    </div>
+						  		  </div>  
+						  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.
+						  			</p>
 						  		</div>
 						  	  </div>
 						  	</div>
@@ -436,7 +481,10 @@
 									<div class="col-2">
 										<img src="img/images/my-photo.png" alt="photo">
 									</div>
-								<div class="col">
+								<div class="col-9 align-self-center">
+									  <div class="col-1 offset-5">
+									    <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									  </div>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
 								</div>
 							  </div>
@@ -448,7 +496,10 @@
 									<div class="col-2">
 										<img src="img/images/my-photo.png" alt="photo">
 									</div>
-								<div class="col">
+								<div class="col-9 align-self-center">
+									<div class="col-1 offset-5">
+									  <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									</div>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
 								</div>
 				             </div>
@@ -456,6 +507,9 @@
 
 
 				    </div>
+				</div>
+				<div class="col-1 align-self-center">
+						<div class="owl-next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
 				</div>
 			</div>    
 		</section>
