details.html mobile dev complete

--- a/app/details.html
+++ b/app/details.html
@@ -188,35 +188,103 @@
 						</tr>
 					  </tbody>
 					</table>
-
+		</section>
+		<!--table mobile-->
+		<section class="table-mobile">
+		<div class="container-fluid">
+			<div class="row">
+			<div class="col-7 name"><h4>Лендинг</h4><span class="price">от 15 000 руб</span></div>
+			<div class="col-6">Уникальный Дизайн</div>
+			<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+			<div class="col-6">Интеграция на CMF</div>
+			<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+			<div class="col-6">Помощь в составлении ТЗ</div>
+			<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+			<div class="col-6">Сопровождение и поддержка</div>
+			<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+			<div class="col-6">
+				<a href="#form-popup" class="popup-with-form">
+					<button type="button" class="btn btn-secondary">Заказать</button>
+				</a>
+			</div>
+		</div>
+			<div class="row">
+				<div class="col-7 name"><h4>Сайт-визитка</h4><span class="price">от 15 000 руб</span></div>
+				<div class="col-6"><span>Уникальный Дизайн</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Интеграция на CMF</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Помощь в составлении</span> ТЗ</div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Сопровождение и поддержка</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6">
+					<a href="#form-popup" class="popup-with-form">
+						<button type="button" class="btn btn-secondary">Заказать</button>
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-7 name"><h4>Интернет-магазин</h4><span class="price">от 15 000 руб</span></div>
+				<div class="col-6"><span>Уникальный Дизайн</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Интеграция на CMF</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Помощь в составлении ТЗ</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Сопровождение и поддержка</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6">
+					<a href="#form-popup" class="popup-with-form">
+						<button type="button" class="btn btn-secondary">Заказать</button>
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-7 name"><h4>Корпоративный сайт</h4><span class="price">от 15 000 руб</span></div>
+				<div class="col-6"><span>Уникальный Дизайн</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Интеграция на CMF</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Помощь в составлении ТЗ</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6"><span>Сопровождение и поддержка</span></div>
+				<div class="col-6"><i class="fa fa-check" aria-hidden="true"></i></div>
+				<div class="col-6">
+					<a href="#form-popup" class="popup-with-form">
+						<button type="button" class="btn btn-secondary">Заказать</button>
+					</a>
+				</div>
+			</div>
+		</div>
 		</section>
 		<section class="services">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-4"><h3>Дополнительные услуги</h3></div>
+					<div class="col-lg-4 col-md-4 col-sm-7 col-xs-7"><h3>Дополнительные услуги</h3></div>
 				</div>
 				<div class="row table-services">
-					<div class="col-4">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Создание форм обратной связи</h5>
 						<p>от 2000 руб</p>
 					</div>
-					<div class="col-4 align-self-center">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Верстка HTML шаблона из готового макета</h5>
 						<p>от 2000 руб</p>
 					</div>
-					<div class="col-4 align-self-center">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Интеграция верстки на MODX</h5>
 						<p>от 2000 руб</p>
 					</div>
-					<div class="col-4 align-self-center">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Создание кастомных jquery плагинов</h5>
 						<p>от 2000 руб</p>
 					</div>
-					<div class="col-4">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Интеграция jquery плагинов в верстку</h5>
 						<p>от 2000 руб</p>
 					</div>
-					<div class="col-4">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<h5>Создание индивидуально дизайна сайта</h5>
 						<p>от 2000 руб</p>
 					</div>
