--- a/app/details.html
+++ b/app/details.html
@@ -68,7 +68,7 @@
      				</ul>	
      			</div>
      			<div class="bell">
-     			  <a href="#">
+					<a href="#form-popup" class="popup-with-form">
      				<i class="fa fa-bell-o" aria-hidden="true"></i>
      			   </a>	
      			</div>
@@ -387,9 +387,9 @@
                      <div class="row justify-content-center">
                          <div class="col-lg-4 col-md-4 col-sm-5 col-xs-5">
                              <form action="#">
-                                 <span>Ваше имя</span>
+                                 <label for="name">Ваше имя</label>
                                  <input id="name" type="text" required />
-                                 <span>Ваш номер</span>
+                                 <label for="phone-mask">Ваш номер</label>
                                  <input  id="phone-mask" type="text" required>
                                  <div><textarea name="mess" id="area" cols="30" rows="5" placeholder="Опишите своими словами"></textarea></div>
                                  <button type="submit" class="btn btn-success" value="Отправить">Отправить</button>
