html static site alpha dev complete

--- a/app/article.html
+++ b/app/article.html
@@ -116,7 +116,7 @@
         <div class="row">
             <div class="col-lg-2 col-sm-12 sidebar">
                 <ul class="left-sidebar">
-                    <li class="menu-item"><span>Новости из мира web</span>
+                    <li class="menu-item"><a href="#">Новости из мира web</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <ul class="articles">
                             <li><a href="#">Основы работы с REST API</a></li>
@@ -124,7 +124,7 @@
                             <li><a href="#">ES-6 новые фичи</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><span>MODX Revo</span>
+                    <li class="menu-item"><a href="#">MODX Revo</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <ul class="articles">
                             <li><a href="#">Основы работы с REST API</a></li>
@@ -132,7 +132,7 @@
                             <li><a href="#">ES-6 новые фичи</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><span>JS\Jquery</span>
+                    <li class="menu-item"><a href="#">JS\Jquery</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <ul class="articles">
                             <li><a href="#">Основы работы с REST API</a></li>
@@ -140,7 +140,7 @@
                             <li><a href="#">ES-6 новые фичи</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><span>Дизайн</span>
+                    <li class="menu-item"><a href="#">Дизайн</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <ul class="articles">
                             <li><a href="#">Основы работы с REST API</a></li>
@@ -148,12 +148,13 @@
                             <li><a href="#">ES-6 новые фичи</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><span>Разное</span>
+                    <li class="menu-item"><a href="#">Разное</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                         <ul class="articles">
                             <li><a href="#">Основы работы с REST API</a></li>
                             <li><a href="#">Jquery актуальна как никогда</a></li>
                             <li><a href="#">ES-6 новые фичи</a></li>
+                            <li><a href="#">Шалонизатор Fenom в MODX</a></li>
                         </ul>
                     </li>
                 </ul>
