--- a/app/reviews.html
+++ b/app/reviews.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -106,137 +108,63 @@
 </header>
 
 <!-- main-section -->
-<main class="main-blog">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-2 col-sm-12 sidebar">
-                <ul class="left-sidebar">
-                    <li class="menu-item"><a href="#">Новости из мира web</a>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <ul class="articles">
-                            <li><a href="#">Основы работы с REST API</a></li>
-                            <li><a href="#">Jquery актуальна как никогда</a></li>
-                            <li><a href="#">ES-6 новые фичи</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="#">MODX Revo</a>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <ul class="articles">
-                            <li><a href="#">Основы работы с REST API</a></li>
-                            <li><a href="#">Jquery актуальна как никогда</a></li>
-                            <li><a href="#">ES-6 новые фичи</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="#">JS\Jquery</a>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <ul class="articles">
-                            <li><a href="#">Основы работы с REST API</a></li>
-                            <li><a href="#">Jquery актуальна как никогда</a></li>
-                            <li><a href="#">ES-6 новые фичи</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="#">Дизайн</a>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <ul class="articles">
-                            <li><a href="#">Основы работы с REST API</a></li>
-                            <li><a href="#">Jquery актуальна как никогда</a></li>
-                            <li><a href="#">ES-6 новые фичи</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="#">Разное</a>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <ul class="articles">
-                            <li><a href="#">Основы работы с REST API</a></li>
-                            <li><a href="#">Jquery актуальна как никогда</a></li>
-                            <li><a href="#">ES-6 новые фичи</a></li>
-                        </ul>
-                    </li>
-                </ul>
+<main class="main-reviews">
+    <div class="container">
+        <div class="row justify-content-start review-item">
+            <div class="col-9 align-self-center">
+                <div class="col-1 offset-5">
+                    <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
             </div>
-
-            <div class="col-lg-10 col-sm-12 items">
-
-                <div class="row item">
-                    <div class="col-12">
-                        <h2><a href="#">Новости из мира web</a></h2>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-2 offset-2">
+                        <img src="img/favicon/user.svg" alt="photo">
                     </div>
-                    <div class="col-lg-7 col-sm-12"><img src="img/images/jquery-444684_640.png" alt="jquery"></div>
-                    <div class="col-lg-5 col-sm-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aliquid animi blanditiis dolorum ea eligendi
-                            et harum hic, illo in ipsa iste
-                            laudantium nemo, officiis pariatur,
-                            quas quibusdam quisquam tempore voluptatem!</p>
-                        <div class="row">
-                            <div class="col-3">
-                                <a href="#" class="popup-with-form">
-                                    <button type="button" class="btn btn-secondary">Открыть Полностью</button>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="col-5 align-self-center">
+                        <strong class="name">Владислав Панкратов-Черный</strong><br>
+                        <span class="position">Заказчик</span>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="row item">
-                    <div class="col-12">
-                        <h2><a href="#">Новости из мира web</a></h2>
+        <div class="row justify-content-center review-item">
+            <div class="col-9 align-self-center">
+                <div class="col-1 offset-5">
+                    <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-2 offset-2">
+                        <img src="img/favicon/user.svg" alt="photo">
                     </div>
-                    <div class="col-lg-7 col-sm-12"><img src="img/images/node-js-736399_640.png" alt="node.js"></div>
-                    <div class="col-lg-5 col-sm-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aliquid animi blanditiis dolorum ea eligendi
-                            et harum hic, illo in ipsa iste
-                            laudantium nemo, officiis pariatur,
-                            quas quibusdam quisquam tempore voluptatem!</p>
-                        <div class="row">
-                            <div class="col-3">
-                                <a href="#" class="popup-with-form">
-                                    <button type="button" class="btn btn-secondary">Открыть Полностью</button>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="col-5 align-self-center">
+                        <strong class="name">Владислав Панкратов-Черный</strong><br>
+                        <span class="position">Заказчик</span>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="row item">
-                    <div class="col-12">
-                        <h2><a href="#">Новости из мира web</a></h2>
-                    </div>
-                    <div class="col-lg-7 col-sm-12"><img src="img/images/slider-2091453_640.jpg" alt="slider"></div>
-                    <div class="col-lg-5 col-sm-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aliquid animi blanditiis dolorum ea eligendi
-                            et harum hic, illo in ipsa iste
-                            laudantium nemo, officiis pariatur,
-                            quas quibusdam quisquam tempore voluptatem!</p>
-                        <div class="row">
-                            <div class="col-3">
-                                <a href="#" class="popup-with-form">
-                                    <button type="button" class="btn btn-secondary">Открыть Полностью</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+        <div class="row justify-content-start review-item">
+            <div class="col-9 align-self-center">
+                <div class="col-1 offset-5">
+                    <i class="fa fa-quote-right" aria-hidden="true"></i></p>
                 </div>
-
-                <div class="row item">
-                    <div class="col-12">
-                        <h2><a href="#">Новости из мира web</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sequi harum iusto expedita iure. Distinctio odio, quos iure reprehenderit eum ab illo, harum iusto, expedita, voluptate ipsum in labore possimus.</p>
+            </div>
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-2 offset-2">
+                        <img src="img/favicon/user.svg" alt="photo">
                     </div>
-                    <div class="col-lg-7 col-sm-12"><img src="img/images/new.png" alt="desctop"></div>
-                    <div class="col-lg-5 col-sm-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Aliquid animi blanditiis dolorum ea eligendi
-                            et harum hic, illo in ipsa iste
-                            laudantium nemo, officiis pariatur,
-                            quas quibusdam quisquam tempore voluptatem!</p>
-                        <div class="row">
-                            <div class="col-3">
-                                <a href="#" class="popup-with-form">
-                                    <button type="button" class="btn btn-secondary">Открыть полностью</button>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="col-5 align-self-center">
+                        <strong class="name">Владислав Панкратов-Черный</strong><br>
+                        <span class="position">Заказчик</span>
                     </div>
                 </div>
             </div>
